# testing_actions

./: .codecov.yml  .coveragerc  .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  make.bat  pyproject.toml  requirements-dev.txt  setup.py
.github/workflows/: publish.yml  publish_macos.yml  publish_manylinux.yml  publish_manylinux_wheels.yml  publish_source.yml  publish_windows.yml  publish_windows_macos_wheels.yml  pythonpackage.yml  pythonpublish.yml  pythonpublish_manylinux.yml  test_macos.yml  test_ubuntu.yml  test_windows.yml  testing.yml
package/: __init__.py  _c_extension.c  _c_extension.pyx  _version.py
testing_actions/: ._version.py  __init__.py  _c_extension.c  _c_extension.pyx  _py_func.py  _version.py
testing_actions/src/: c_extension.c  c_extension.h
tests/: test_cfunc.py  test_pyfunc.py
